--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "hardhat-project",
   "devDependencies": {
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.3",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.0.2"
+    "@nomicfoundation/hardhat-verify": "^2.0.6",
+    "@openzeppelin/contracts": "^5.0.2",
+    "dotenv": "^16.4.5",
+    "hardhat": "^2.22.3"
   }
 }
