add deployment process

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,4 @@
 SEPOLIA_ALCHEMY_API_KEY=
-MUMBAI_ALCHEMY_API_KEY=
-EETHERSCAN_API_KEY=
-POLYGON_API_KEY=
+ETHERSCAN_API_KEY=
 PRIVATE_KEY=
+MAINNET_ALCHEMY_API_KEY=
